<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.transcode.smartcity101p2.view.KanitTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/emergency_select_emergency_type"
                android:textColor="@color/dark_purple"
                android:textSize="@dimen/text_header_size" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray2"
                android:padding="2dp" />

            <EditText
                android:id="@+id/text_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emergency_emergency_detail_hint"
                android:maxLines="5"
                android:padding="5dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emergency_emergency_name_hint"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/text_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emergency_emergency_tel_hint"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/black" />

            <com.transcode.smartcity101p2.view.KanitTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emergency_emergency_event_photo"
                android:textColor="@color/dark_purple"
                android:textSize="@dimen/text_header_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclervieImage"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_margin="2dp"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/add_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="2dp"
                    android:src="@mipmap/add_remove_04" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp">

                    <com.mapbox.mapboxsdk.maps.MapView
                        android:id="@+id/mapview"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        mapbox:mapbox_cameraZoom="13"
                        mapbox:mapbox_styleUrl="https://dev.maps.transcodeglobal.com/styles/osm-bright/style.json" />

                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:id="@+id/pin_map"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/icon_pin_101" />

                        <com.transcode.smartcity101p2.view.KanitTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/emergency_emergency_pin_location"
                            android:textColor="@color/dark_purple"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="5dp"
                        android:background="@color/gray" />

                    <EditText
                        android:id="@+id/location_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded_corner_button_bg_gray2"
                        android:gravity="left|top"
                        android:hint="@string/emergency_emergency_location_hint_text"
                        android:padding="10dp"
                        android:textSize="@dimen/text_small_size" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.transcode.smartcity101p2.view.KanitTextView
        android:id="@+id/concern_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/emer_red_text"
        android:textColor="@color/red"
        android:textSize="@dimen/text_very_small_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="1">

        <com.transcode.smartcity101p2.view.KanitTextView
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.6"
            android:background="@drawable/rounded_corner_bg_purple"
            android:gravity="center"
            android:text="@string/emergency_emergency_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_normal_size"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>