<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner_textbox_bg"
    android:padding="5dp">

    <ImageView
        android:id="@+id/dl_close"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="right"
        android:background="@android:drawable/ic_menu_close_clear_cancel" />

    <LinearLayout
        android:id="@+id/comment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.transcode.smartcity101p2.view.KanitTextView
            android:id="@+id/dl_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/comment_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.transcode.smartcity101p2.view.KanitTextView
                android:id="@+id/text_support1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:text="@string/comment_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal_size" />

            <com.transcode.smartcity101p2.view.KanitTextView
                android:id="@+id/text_support2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=" : "
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal_size" />

            <com.transcode.smartcity101p2.view.KanitTextView
                android:id="@+id/dl_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.transcode.smartcity101p2.view.KanitTextView
                android:id="@+id/text_support3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:text="@string/comment_rate"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal_size" />

            <com.transcode.smartcity101p2.view.KanitTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/special_1"
                android:textColor="@color/red"
                android:textSize="@dimen/text_normal_size" />

            <com.transcode.smartcity101p2.view.KanitTextView
                android:id="@+id/text_support4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=" : "
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal_size" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/MyRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="0.0"
                android:stepSize="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.transcode.smartcity101p2.view.KanitTextView
                android:id="@+id/text_support5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/comment_message"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal_size" />

            <com.transcode.smartcity101p2.view.KanitTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/special_1"
                android:textColor="@color/red"
                android:textSize="@dimen/text_normal_size" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/rounded_corner_textbox_bg">

            <com.transcode.smartcity101p2.view.KanitEditTextView
                android:id="@+id/dl_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="left|top"
                android:hint="@string/hint_comment"
                android:maxLength="150"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal_size" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.transcode.smartcity101p2.view.KanitTextView
                android:id="@+id/dl_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_button_bg_darkblue"
                android:gravity="center"
                android:text="@string/ok_text"
                android:textColor="@color/white"
                android:textSize="@dimen/text_button_size"
                android:textStyle="bold" />

            <View
                android:layout_width="10dp"
                android:layout_height="1px" />

            <com.transcode.smartcity101p2.view.KanitTextView
                android:id="@+id/dl_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_button_bg_darkred"
                android:gravity="center"
                android:text="@string/cancel_text"
                android:textColor="@color/white"
                android:textSize="@dimen/text_button_size"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>